force-app/main/default/objects/Pokemon__c/fields/Apodo__c.field-meta.xml
<CustomField>
    <fullName>Apodo__c</fullName>
    <label>Apodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>