force-app/main/default/objects/Pokemon__c/fields/Pokebola__c.field-meta.xml
<CustomField>
    <fullName>Pokebola__c</fullName>
    <label>Pokebola</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poké Ball</fullName>
            </value>
            <value>
                <fullName>Super Ball</fullName>
            </value>
            <value>
                <fullName>Ultra Ball</fullName>
            </value>
            <value>
                <fullName>Master Ball</fullName>
            </value>
            <value>
                <fullName>Safari Ball</fullName>
            </value>
            <value>
                <fullName>Fast Ball</fullName>
            </value>
            <value>
                <fullName>Lure Ball</fullName>
            </value>
            <value>
                <fullName>Heavy Ball</fullName>
            </value>
            <value>
                <fullName>Level Ball</fullName>
            </value>
            <value>
                <fullName>Park Ball</fullName>
            </value>
            <value>
                <fullName>Moon Ball</fullName>
            </value>
            <value>
                <fullName>Friend Ball</fullName>
            </value>
            <value>
                <fullName>Love Ball</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>