force-app/main/default/objects/Pokemon__c/recordTypes/Pokemon.recordType-meta.xml
<RecordType>
    <fullName>Pokemon</fullName>
    <active>true</active>
    <label>Pokemon</label>
</RecordType>